--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <header>
       <nav>
         <a href="/index.html">Inicio</a>
-        <a href="/pages/personajes.html">Personajes</a>
-        <a href="/pages/galeria.html">Galería</a>
-        <a href="/pages/info.html">Registrarse</a>
+        <a href="/sites/personajes.html">Personajes</a>
+        <a href="/sites/galeria.html">Galería</a>
+        <a href="/sites/info.html">Registrarse</a>
       </nav>
     </header>
     <main>
