--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="index.html">Inicio</a>
         <a href="pages/personajes.html">Personajes</a>
         <a href="pages/galeria.html">Galería</a>
-        <a href="pages/info.html">Registrarse</a>
+        <a href="/pages/info.html">Registrarse</a>
       </nav>
     </header>
     <main>
