--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <nav>
         <a href="index.html">Inicio</a>
         <a href="pages/personajes.html">Personajes</a>
-        <a href="pages/galeria.html">Galería</a>
+        <a href="/pages/galeria.html">Galería</a>
         <a href="/pages/info.html">Registrarse</a>
       </nav>
     </header>
