--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <nav>
         <a href="index.html">Inicio</a>
-        <a href="pages/personajes.html">Personajes</a>
+        <a href="/pages/personajes.html">Personajes</a>
         <a href="/pages/galeria.html">Galería</a>
         <a href="/pages/info.html">Registrarse</a>
       </nav>
