--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -2,68 +2,68 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon/apple-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon/apple-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon/apple-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon/apple-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon/apple-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-icon-180x180.png" />
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/favicon/android-icon-192x192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png" />
-    <link rel="manifest" href="assets/favicon/manifest.json" />
+    <link rel="apple-touch-icon" sizes="57x57" href="../assets/favicon/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="../assets/favicon/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="../assets/favicon/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="../assets/favicon/apple-icon-76x76.png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="../assets/favicon/apple-icon-114x114.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="../assets/favicon/apple-icon-120x120.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="../assets/favicon/apple-icon-144x144.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="../assets/favicon/apple-icon-152x152.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-icon-180x180.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="../assets/favicon/android-icon-192x192.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="../assets/favicon/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="../assets/favicon/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/normalize.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Galería</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="index.html">Inicio</a>
-        <a href="pages/personajes.html">Personajes</a>
-        <a href="pages/galeria.html">Galería</a>
-        <a href="pages/info.html">Registrarse</a>
+        <a href="../index.html">Inicio</a>
+        <a href="personajes.html">Personajes</a>
+        <a href="galeria.html">Galería</a>
+        <a href="info.html">Registrarse</a>
       </nav>
     </header>
     <main>
       <h1 class="titulo">Galería</h1>
       <div class="galeria-audio">
-        <audio src="assets/audio/avengers-infinity-war-song.mp3" controls></audio>
+        <audio src="../assets/audio/avengers-infinity-war-song.mp3" controls></audio>
       </div>
       <div class="galeria-imagen">
         <picture>
-          <source srcset="assets/images/thanos.webp, assets/images/mobile/thanos.webp 2x" />
-          <img srcset="assets/images/jpg/thanos.jpg, assets/images/jpg/mobile/thanos.jpg 2x" alt="Thanos" />
+          <source srcset="../assets/images/thanos.webp, ../assets/images/mobile/thanos.webp 2x" />
+          <img srcset="../assets/images/jpg/thanos.jpg, ../assets/images/jpg/mobile/thanos.jpg 2x" alt="Thanos" />
         </picture>
         <picture>
-          <source srcset="assets/images/nick.webp, assets/images/mobile/nick.webp 2x" />
-          <img srcset="assets/images/jpg/nick.jpg, assets/images/jpg/mobile/nick.jpg 2x" alt="Nick Fury" />
+          <source srcset="../assets/images/nick.webp, ../assets/images/mobile/nick.webp 2x" />
+          <img srcset="../assets/images/jpg/nick.jpg, ../assets/images/jpg/mobile/nick.jpg 2x" alt="Nick Fury" />
         </picture>
         <picture>
-          <source srcset="assets/images/stark.webp, assets/images/mobile/stark.webp 2x" />
-          <img srcset="assets/images/jpg/stark.jpg, assets/images/jpg/mobile/stark.jpg 2x" alt="Tony Stark" />
+          <source srcset="../assets/images/stark.webp, ../assets/images/mobile/stark.webp 2x" />
+          <img srcset="../assets/images/jpg/stark.jpg, ../assets/images/jpg/mobile/stark.jpg 2x" alt="Tony Stark" />
         </picture>
         <picture>
-          <source srcset="assets/images/capitan.webp, assets/images/mobile/capitan.webp 2x" />
+          <source srcset="../assets/images/capitan.webp, ../assets/images/mobile/capitan.webp 2x" />
           <img
-            srcset="assets/images/jpg/capitan.jpg, assets/images/jpg/mobile/capitan.jpg 2x"
+            srcset="../assets/images/jpg/capitan.jpg, ../assets/images/jpg/mobile/capitan.jpg 2x"
             alt="Capitan América"
           />
         </picture>
         <picture>
-          <source srcset="assets/images/spiderman.webp, assets/images/mobile/spiderman.webp 2x" />
-          <img srcset="assets/images/jpg/spiderman.jpg, assets/images/jpg/mobile/spiderman.jpg 2x" alt="Spider-Man" />
+          <source srcset="../assets/images/spiderman.webp, ../assets/images/mobile/spiderman.webp 2x" />
+          <img srcset="../assets/images/jpg/spiderman.jpg, ../assets/images/jpg/mobile/spiderman.jpg 2x" alt="Spider-Man" />
         </picture>
       </div>
       <div class="galeria-video">
-        <video src="assets/video/funny-moments-infinity-war.mp4" controls></video>
+        <video src="../assets/video/funny-moments-infinity-war.mp4" controls></video>
       </div>
     </main>
     <footer>Marvel's Avengers</footer>
