Agregado tony-cumbia a la Galeria

--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -64,6 +64,7 @@
       </div>
       <div class="galeria-video">
         <video src="../assets/video/funny-moments-infinity-war.mp4" controls></video>
+        <video src="../assets/video/tony-cumbia.mp4" controls></video>
       </div>
     </main>
     <footer>Marvel's Avengers</footer>
