Removed: Class name in <h1>.

--- a/pages/info.html
+++ b/pages/info.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="titulo">Registrarse</h1>
+      <h1>Registrarse</h1>
       <form>
         <fieldset>
           <legend>Datos personales</legend>
@@ -44,7 +44,7 @@
           <label for="nacimiento">Fecha de nacimiento</label>
           <input id="nacimiento" type="date" />
           <h2>Género</h2>
-          <label>Dominante</label>
+          <label>Hombre</label>
           <input type="radio" name="genero" value="masculino" />
           <label>Mujer</label>
           <input type="radio" name="genero" value="mujer" />
