Removed: 'titulo' class.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="titulo">Los Vengadores (The Avengers)</h1>
+      <h1>Los Vengadores (The Avengers)</h1>
       <nav>
         <ul>
           <li><a href="#introduccion">Introducción</a></li>
@@ -57,7 +57,7 @@
         </ul>
       </nav>
       <div class="tarjeta">
-        <h2 class="titulo" id="introduccion">Introducción</h2>
+        <h2 id="introduccion">Introducción</h2>
         <p class="tarjeta-parrafo">
           Los Vengadores nacen en 1963 de la mente de Stan Lee y Jack Kirby, como respuesta a la famosa Liga de la
           Justicia de DC cómic que, por aquel entonces, acaparaba todos los números uno en los rankings de ventas.
@@ -129,7 +129,7 @@
         </p>
       </div>
       <div class="tarjeta">
-        <h2 class="titulo" id="como-se-unieron">¿Cómo se unieron los héroes más poderosos de la Tierra?</h2>
+        <h2 id="como-se-unieron">¿Cómo se unieron los héroes más poderosos de la Tierra?</h2>
         <p class="tarjeta-parrafo">
           Pues en el primer número del cómic de Los Vengadores, se nos narra cómo Loki, hermano de Thor de insaciable
           ambición, tiende una trampa a Hulk para que le consideren culpable de un accidente de tren (aunque en realidad
@@ -143,7 +143,7 @@
         </p>
       </div>
       <div class="tarjeta">
-        <h2 class="titulo" id="un-grupo-cambiante">Un grupo en constante cambio</h2>
+        <h2 id="un-grupo-cambiante">Un grupo en constante cambio</h2>
         <p class="tarjeta-parrafo">
           Uno de los principales atractivos de la formación, en los cómics claro, es la incesante marea de superhéroes
           que pasan por Los Vengadores. No en vano, hasta la fecha, son más de 75 los superhéroes que han formado parte
