--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="titulo">Galería</h1>
+      <h1>Galería</h1>
       <div class="galeria-audio">
         <audio src="../assets/audio/avengers-infinity-war-song.mp3" controls></audio>
       </div>
