--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -33,7 +33,7 @@
       </nav>
     </header>
     <main>
-      <h1 class="titulo">Personajes de Avengers</h1>
+      <h1>Personajes de Avengers</h1>
       <table>
         <caption>
           Personajes
